# kaplan2

./: .gitignore  BENCHMARKS.md  CHANGES.md  CLAUDE.md  Makefile  README.md  SESSION_STATE.md  dune  dune-project  ktdeque.opam
bench/: README.md  adversarial.sh  adversarial_plot.py  cadeque-c.sh  cadeque-compare.sh  canonical.sh  plot.py  plot_cadeque8.py  render-comparison-page.py  sweep.sh  three-way.sh  wcet.sh
c/: .gitignore  COMPARISON.md  LICENSE  Makefile  PROFILE_README.md  README.md  diff_workload.c  eject_only.c  h1_test.c  h2_arena.c  h2_nodiff.c  h2_prefault.c  inject_only.c  ktdeque.h  ktdeque_dequeptr.c  profile_driver.c  profile_no_deref.c  profile_warm.c  test.c  test_fallback_trace.c  test_threads.c  wc_test.c
c/benches/: bench.c  bench_adversarial.c  bench_cadeque.c  bench_perf.c  bench_wcet.c
c/examples/: Makefile  hello.c
c/experiments/: README.md  h1_madv.c  h2_huge.c  h3_noinline.c  h3_test.c  ktdeque_d4cell.c  ktdeque_viennot.c  profile_eject.sh  profile_path.c  profile_phases.c
c/include/: ktcadeque.h  ktdeque.h
c/src/: ktcadeque.c  ktdeque_dequeptr.c
c/tests/: diff_cadeque.c  diff_workload.c  fuzz.c  fuzz_afl.c  fuzz_cadeque.c  test_persistence_stress.c  test_threads.c
c/tests/afl_seeds/: seed1
c/tests/afl_seeds_cadeque/: seed_concat  seed_mix  seed_regs
kb/: GLOSSARY.md  INDEX.md  cadeque8-formalization.html  color-invariants.html  evolution-readable.html  evolution.html  execution-manual-v3.md  feedback.md  ktdeque.bundle.js  lessons.md  memory-graph.html  plan-catenable.md  viennot-comparison.html
kb/architecture/: overview.md  reading-order.md
kb/architecture/decisions/: INDEX.md  adr-0001-public-api-encoding.md  adr-0002-heap-representation.md  adr-0003-deviation-shortcuts.md  adr-0004-rocq-encoding-style.md  adr-0005-extraction-policy.md  adr-0006-symmetry.md  adr-0007-comp-eq.md  adr-0008-pointer-refinement.md  adr-0009-deque4-end-to-end.md  adr-0010-imperative-dsl.md  adr-0011-element-abstraction.md  adr-0012-packet-aggregation.md  adr-0013-diff-link-encoding.md  adr-0014-pair-tree-flattening.md
kb/conventions/: INDEX.md  code-style.md  error-handling.md  proof-style.md  testing-strategy.md
kb/domain/: INDEX.md  prd.md
kb/indexes/: INDEX.md  by-task.md
kb/properties/: INDEX.md  edge-cases.md  functional.md  non-functional.md
kb/reports/: c-ocaml-equivalence.md  c-perf-audit.md  cadeque8-wc-o1-evidence.md  cadeque9-complete.md  catenable-keystone-closure-2026-06-11.md  honest-audit-2026-06-02.md  minimum-release-gate-2026-05-25.md  viennot-comparison-2026-06-11.md  wc-o1-verification-audit-2026-05-24.md
kb/runbooks/: INDEX.md  audit-checklist.md  escape-hatches.md  gate-d-top-down-plan.md  minimum-release-gate.md  rebuild-plan-2026-06-02.md
kb/spec/: INDEX.md  algorithms.md  api-contracts.md  cadeque8-tt-eject-wc-o1-plan.md  cadeque9-paper-faithful-plan.md  catenable-concat-invariant.md  catenable-type-design.md  config-and-formats.md  data-model.md  deque-reachable-invariant.md  error-taxonomy.md  kcadeque-design.md  phase-4b-imperative-dsl.md  section12.4-repair-cases.md  section3-recursive-slowdown.md  section4-repair-cases.md  section4-representation.md  section6-catenable-deques.md  why-bounded-cascade.md  why-catenable.md
ocaml/: README.md
ocaml/api/: cadeque.ml  cadeque.mli  deque.ml  deque.mli  dune
ocaml/bench/: adversarial.ml  bench_deque4.ml  cadeque_compare.ml  canonical.ml  catenable_compare.ml  compare.ml  crossover.ml  diag_inject.ml  diff_cadeque.ml  dune  flat_ab.ml  flat_ab_ext.ml  k8_aggregate.ml  k8_alloc.ml  k8_concat_eject_stress.ml  k8_concat_pop_stress.ml  k8_tt_concat_stress.ml  k8_tt_diagnose.ml  k8_wc_stress.ml  k8i_chain_shapes.ml  k8i_check.ml  k8i_qcheck.ml  k9_compare.ml  k9_concat_cost.ml  k9_depth_probe.ml  k9_qcheck.ml  k9_smoke.ml  k9_tt_concat_stress.ml  k9_wc_stress.ml  kc8_csv.ml  kc8_qcheck.ml  kc8_vs_vi.ml  kc_qcheck.ml  kc_vs_vi.ml  kshim_qcheck.ml  push_prof.ml  viennot_alloc.ml  wcet.ml
ocaml/bench/viennot/: cadeque_core.ml  color_GYOR.ml  color_GYR.ml  deque.ml  deque_core.ml  dune  listLike.ml
ocaml/bench/viennot_cad/: cadeque.ml  deque.ml  dune
ocaml/examples/: catenable_hello.ml  dune  hello.ml
ocaml/extracted/: diff_workload.ml  difftrace6.ml  dune  erased_tree.ml  eraw.ml  fastbuf.ml  kCadeque.ml  kCadeque.mli  kCadeque8.ml  kCadeque8.mli  kCadeque8Inline.ml  kCadeque9.ml  kCadeque9.mli  kCadeque9Inline.ml  kCadequeShim.ml  kTCadeque.ml  kTCadeque.mli  kTCadequeFast.ml  kTCadequeFast.mli  kTCatenableDeque.ml  kTCatenableDeque.mli  kTDeque.ml  kTDeque.mli  kTErasedChain.ml  kTErasedChain.mli  kTFlatCadeque.ml  kTFlatCadeque.mli  kTSizedChain.ml  kTSizedChain.mli  kt_deque_ptr.mli  sraw.ml  test_kt_deque_ptr.ml  test_ktdeque.ml
ocaml/lib/: deque4.ml  deque4_handwritten.ml  deque4_ref.ml  dune
ocaml/test_monolith/: dune  fuzz_deque4.ml  fuzz_kt_deque_ptr.ml  fuzz_ktdeque.ml
ocaml/test_qcheck/: dune  test_deque4.ml  test_kt_deque_ptr.ml  test_ktcatenable.ml  test_ktdeque.ml
rocq/: README.md
rocq/KTDeque/: dune
rocq/KTDeque/Buffer6/: Correctness.v  SizedBuffer.v  SmallMoves.v
rocq/KTDeque/Cadeque6/: Adopt6.v  Color.v  Correctness.v  Cost.v  Examples.v  HeapCells.v  Model.v  OpsAbstract.v  OpsImperative.v  Regularity.v  Repair.v  RepairS12.v
rocq/KTDeque/Cadeque7/: Buffer.v  Concat.v  Model.v  PopEject.v  PushInject.v  Regularity.v
rocq/KTDeque/Cadeque8/: Model.v  Ops.v  OpsFast.v  Seq.v  WF.v  WFInvariant.v
rocq/KTDeque/Cadeque9/: GateDProofPlan.v  GateDPublicTheorems.v  Model.v  Normalize.v  Ops.v  OpsFast.v  PublicTheorems.v  PublicTheoremsAudit.v  WFInvariant.v  (+1 more)
rust/: Cargo.toml  README.md
rust/ktdeque-deque4/: Cargo.toml
rust/ktdeque-deque4/src/: lib.rs
rust/ktdeque-deque4/tests/: proptest_deque4.rs
scripts/: validate.sh
tools/: check_wc_o1_release_gate.sh
ts/: README.md  difftrace-vs-ocaml.sh  package-lock.json  package.json  tsconfig.json
ts/src/: alloc.ts  browser.ts  buf5.ts  cadeque.ts  deque.ts  element.ts  index.ts  snapshot.ts
ts/test/: debug.ts  difftrace.ts  fuzz.ts  fuzz6.ts  oracle.ts  wc.ts  wc6.ts
(+58 files in other folders)
