(executable
 (name compare)
 (libraries unix viennot_deque ktdeque ktdeque_bench_helpers))

(executable
 (name crossover)
 (libraries unix viennot_deque ktdeque))

(executable
 (name diag_inject)
 (libraries ktdeque))

(executable
 (name viennot_alloc)
 (libraries unix viennot_deque))

; canonical.ml: compare our verified KTDeque against canonical-style
; alternatives (Viennot, our hand-written Deque4, list-based reference).
; Driven from bench/canonical.sh.
(executable
 (name canonical)
 (libraries unix viennot_deque ktdeque ktdeque_bench_helpers))

; adversarial.ml: persistent-fork microbench — re-run a single op from
; a saved state M times to defeat the amortized analysis on D4.  Driven
; from bench/adversarial.sh.
(executable
 (name adversarial)
 (libraries unix viennot_deque ktdeque ktdeque_bench_helpers))

; catenable_compare.ml: extracted catenable cadeque (Cadeque6) vs
; Viennot et al.'s catenable cadeque.  Functional equivalence over a
; random workload + timing of each public op (push/inject/pop/eject/concat).
(executable
 (name catenable_compare)
 (libraries unix viennot_cadeque ktdeque))

; kc_vs_vi.ml: Kc (KCadeque) vs Vi (Viennot) only — skips the Cadeque6
; spec side (which uses O(n) cad_normalize per op).  Scales N up
; through {1k, 10k, 100k} by default.
(executable
 (name kc_vs_vi)
 (libraries unix viennot_cadeque ktdeque))

; kc_qcheck.ml: property-based equivalence test of Kc against a
; simple list reference.  Many runs × many ops; catches regressions
; in the KCadequeShim, Phase 5b reformulation, etc.
(executable
 (name kc_qcheck)
 (libraries ktdeque))

; kc8_qcheck.ml: property-based equivalence test for Cadeque8
; (the §6 strict-WC O(1) catenable deque).
(executable
 (name kc8_qcheck)
 (libraries ktdeque))

; kc8_vs_vi.ml: Cadeque8 vs Viennot timing + adversarial workloads.
(executable
 (name kc8_vs_vi)
 (libraries unix viennot_cadeque ktdeque))

; kc8_csv.ml: CSV-emitting bench for plotting (bench/plot_cadeque8.py).
(executable
 (name kc8_csv)
 (libraries unix viennot_cadeque ktdeque))

; k8_alloc.ml: alloc-rate breakdown for push/inject on Cadeque8 vs Viennot.
(executable
 (name k8_alloc)
 (libraries unix viennot_cadeque ktdeque))

; k8i_check.ml: differential correctness check for KCadeque8Inline.
(executable
 (name k8i_check)
 (libraries ktdeque))

; k8i_chain_shapes.ml: histogram of boundary-buffer chain shapes in
; the steady-state push workload (used to design hot-of-hot patterns).
(executable
 (name k8i_chain_shapes)
 (libraries ktdeque))

; k8_aggregate.ml: mixed-workload throughput bench for the headline
; aggregate Cadeque8_inline-vs-Viennot story.
(executable
 (name k8_aggregate)
 (libraries unix viennot_cadeque ktdeque))

; k8i_qcheck.ml: property-based test of cert + fast + inline variants
; against a list reference (push/inject/pop/eject/concat).
(executable
 (name k8i_qcheck)
 (libraries ktdeque))

; k8_wc_stress.ml: empirical per-op WC bound — flat scaling of max
; per-op time refutes hidden O(n) fallbacks.
(executable
 (name k8_wc_stress)
 (libraries unix ktdeque))

; k8_concat_pop_stress.ml: targeted check for the K8Simple-concat-K8Triple
; rebalance path that may trigger the O(n) fallback.
(executable
 (name k8_concat_pop_stress)
 (libraries unix ktdeque))
