; In-tree builder for the examples.  Uses the local ktdeque library;
; this is independent of `opam install`, so `dune build` from the
; repo root or `dune exec ocaml/examples/hello.exe` works directly.
(executable
 (name hello)
 (modules hello)
 (libraries ktdeque))

(executable
 (name catenable_hello)
 (modules catenable_hello)
 (libraries ktdeque))
