; Public library: the OCaml extraction of the Rocq KTDeque/
; formalization.  KTDeque is the production deque we ship.
;
; Exposed modules:
; - [KTDeque]            -- Section-4 non-catenable deque extraction.
;                           The unconditional WC O(1) keystone
;                           (deque_wc_o1_*) is proven in
;                           rocq/KTDeque/DequePtr/DequeKeystone.v
;                           (see `make deque-keystone-gate`).
; - [KTCadeque]          -- Section-6 CATENABLE deque extraction
;                           (rocq/KTDeque/Catenable/, closed 2026-06-11,
;                           `make cat-keystone-gate`).  MODEL layer:
;                           buffers are lists and colours recompute
;                           [length], so extracted wall-clock per op is
;                           O(root buffer size); the mechanized constant
;                           bound (Cost.v:cat_wc_o1) counts buffer
;                           PRIMITIVES.  Production buffers (= the §4
;                           deque) are future work.
;
; The pre-rebuild catenable variants that used to live here (KCadeque*,
; KTCatenableDeque, KCadequeShim) were removed in the 2026-06 rebuild
; re-curation; they are preserved on the archive/pre-rebuild-2026-06-02
; branch.
;
; The .ml/.mli files are checked into git as a snapshot -- `dune build`
; works without ../rocq/ being present.  To regenerate, build
; rocq/KTDeque/Extract/Extraction.v, then copy
; _build/default/kt_extracted/kTDeque.{ml,mli} over, preserving the
; hand-written .mli header.
(library
 (name ktdeque)
 (public_name ktdeque)
 (synopsis "Kaplan-Tarjan persistent real-time deque (Rocq-extracted)")
 (wrapped false)
 (modules kTDeque kTCadeque))

(executable
 (name test_ktdeque)
 (modules test_ktdeque)
 (libraries unix ktdeque))

(executable
 (name diff_workload)
 (modules diff_workload)
 (libraries ktdeque))
