; QCheck tests against the bench-helper hand-written deque (Deque4).
(test
 (name test_deque4)
 (libraries kaplan2_bench_helpers qcheck))

; QCheck tests against the verified extracted library (ktdeque).
; This is the property suite that exercises the public ``ktdeque``
; package — the one we ship via opam.
(test
 (name test_ktdeque)
 (libraries ktdeque qcheck))
