; QCheck tests against the bench-helper hand-written deque (Deque4).
(test
 (name test_deque4)
 (libraries ktdeque_bench_helpers qcheck))

; QCheck tests against the verified extracted library (ktdeque).
; This is the property suite that exercises the public ``ktdeque``
; package — the one we ship via opam.
(test
 (name test_ktdeque)
 (libraries ktdeque qcheck))

; QCheck tests for the catenable extracted module KTCatenableDeque.
; Exercises the new concat operation plus push/pop/inject/eject in
; both their abstract (cad_*) and fully-regularity-preserving
; (cad_*_op_full) flavours.
(test
 (name test_ktcatenable)
 (libraries ktdeque qcheck))
