; QCheck tests against the bench-helper hand-written deque (Deque4).
(test
 (name test_deque4)
 (libraries ktdeque_bench_helpers qcheck))

; QCheck tests against the verified extracted library (ktdeque).
; This is the property suite that exercises the public ``ktdeque``
; package — the one we ship via opam.
(test
 (name test_ktdeque)
 (libraries ktdeque qcheck))

; (test_ktcatenable was removed in the 2026-06 re-curation along with the
;  experimental catenable modules; see archive/pre-rebuild-2026-06-02.)
