; Vendored copy of Viennot et al.'s catenable cadeque from
; external-refs/VerifiedCatenableDeque/lib/{color_GYOR,cadeque_core,cadeque}.ml
; MIT-licensed, used here solely for benchmark comparison per ADR-0009.
;
; NOT modified — black-box external reference.

(library
 (name viennot_cadeque)
 (modules color_GYR color_GYOR deque_core deque listLike cadeque_core cadeque)
 (flags (:standard -w -a)))
